--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,9 @@
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
 
     <!-- CSS semantic -->
-    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.css"/>
+    <!-- <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css"> -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css"/>
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/crea-tu-evento.css">
 
 
@@ -29,8 +30,9 @@
       src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>
-    <script src="semantic/dist/semantic.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.js"></script>
+    <!-- <script src="semantic/dist/semantic.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script src="{{rootURL}}assets/crea-tu-evento.js"></script>
 
     {{content-for "body-footer"}}
